--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "guess-the-color",
   "version": "0.1.0",
+  "homepage": "https://sergeiburyi.github.io/guess_the_color",
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build"
+    "predeploy": "react-scripts build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "color-name-list": "^10.23.0",
